--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,13 @@
             <artifactId>jersey-media-json-binding</artifactId>
             <version>2.30.1</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.12</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
 
